CHANGELOG
---------------
2020-12-11 21:13 PST
- Added a GameManager so we can later trigger events
- Added functionality for reading a single script
- Modified Parser class to remove old code
- Modified Parser class to use List instead of ArrayList (which is deprecated)
---------------
2020-12-11 17:10 PST
- Added TestScene with an empty game object for testing purposes
- Modified Parser class so we can now retrieve a list of commands rather than do everything within the Parser class
---------------
2020-12-11 16:33 PST
- Added Parser class with basic functionality for reading scripts
- Added a debug script for testing purposes 
---------------
2020-12-11 14:57 PST
- Added a Changelog to keep track of changes
- Added Resources folder
- Added Scripts folder
- Added Sprites folder
- Added Character class 
- Added debug characters & images for testing purposes