@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 5af98ae3d42e7e041a875b194fe16303
+folderAsset: yes
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
