@@ -208,7 +208,7 @@ GameObject:
   - component: {fileID: 366997933}
   - component: {fileID: 366997932}
   m_Layer: 5
-  m_Name: Dialogue
+  m_Name: TextBoxText
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -390,7 +390,7 @@ GameObject:
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
   m_StaticEditorFlags: 0
-  m_IsActive: 0
+  m_IsActive: 1
 --- !u!224 &665592611
 RectTransform:
   m_ObjectHideFlags: 0
@@ -405,10 +405,10 @@ RectTransform:
   m_Father: {fileID: 1390494118}
   m_RootOrder: 0
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
-  m_AnchorMin: {x: 0, y: 0}
-  m_AnchorMax: {x: 1, y: 1}
+  m_AnchorMin: {x: 0.5, y: 0.5}
+  m_AnchorMax: {x: 0.5, y: 0.5}
   m_AnchoredPosition: {x: 0, y: 0}
-  m_SizeDelta: {x: 0, y: 0}
+  m_SizeDelta: {x: 1600, y: 900}
   m_Pivot: {x: 0.5, y: 0.5}
 --- !u!114 &665592612
 MonoBehaviour:
@@ -429,14 +429,14 @@ MonoBehaviour:
   m_OnCullStateChanged:
     m_PersistentCalls:
       m_Calls: []
-  m_Sprite: {fileID: 0}
+  m_Sprite: {fileID: 21300000, guid: c0f6bcfb700c3574cae2972cce5f56ad, type: 3}
   m_Type: 0
   m_PreserveAspect: 0
   m_FillCenter: 1
-  m_FillMethod: 4
+  m_FillMethod: 1
   m_FillAmount: 1
   m_FillClockwise: 1
-  m_FillOrigin: 0
+  m_FillOrigin: 1
   m_UseSpriteMesh: 0
   m_PixelsPerUnitMultiplier: 1
 --- !u!222 &665592613
@@ -533,7 +533,7 @@ GameObject:
   - component: {fileID: 799730093}
   - component: {fileID: 799730092}
   m_Layer: 5
-  m_Name: Character
+  m_Name: HeaderText
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -760,6 +760,7 @@ MonoBehaviour:
   card_display: {fileID: 1377154827}
   background: {fileID: 665592610}
   name_text: {fileID: 799730092}
+  dialogue_text: {fileID: 366997932}
 --- !u!4 &1020652729
 Transform:
   m_ObjectHideFlags: 0
