@@ -40,10 +40,11 @@ public class Parser : MonoBehaviour
     // I opted to make four separate regular expression groups instead one huge regular expression for readability
     private regular_expression[] regex_list = new regular_expression[]
         {
-            new regular_expression(new Regex("^SCENE - (?'scene'.*)$", RegexOptions.Compiled), "scene"),
-            new regular_expression(new Regex("(?'character'.*?):", RegexOptions.Compiled), "character"),
-            new regular_expression(new Regex("(?!\\B\"[^\"]*)\\((?'emotion'.*)\\)(?![^\"]*\"\\B)", RegexOptions.Compiled), "emotion"),
-            new regular_expression(new Regex("(?'dialogue'\".*\")", RegexOptions.Compiled), "dialogue")
+            new regular_expression(new Regex("^SCENE - (?'scene'.*)$", RegexOptions.Compiled), "scene"), // Background
+            new regular_expression(new Regex("(?'character'.*?):", RegexOptions.Compiled), "character"), // Character
+            new regular_expression(new Regex("(?!\\B\"[^\"]*)\\((?'position'.*)\\)(?![^\"]*\"\\B)", RegexOptions.Compiled), "position"), // Emotion (image for character)
+            new regular_expression(new Regex("(?!\\B\"[^\"]*)\\[(?'emotion'.*)\\](?![^\"]*\"\\B)", RegexOptions.Compiled), "emotion"), // Emotion (image for character)
+            new regular_expression(new Regex("(?'dialogue'\".*\")", RegexOptions.Compiled), "dialogue") // Dialogue
         };
     
     // Parses the instructions written in the filepath
