@@ -1,0 +1,8 @@
+﻿// Class that manages sprites
+using System.Collections;
+using System.Collections.Generic;
+using UnityEngine;
+
+public class SpriteManager : MonoBehaviour
+{
+}
