@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 5dd9fdc39a5ddce4cae1b0854f987c89
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
